--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -17,28 +17,30 @@ html
     //- Navbar Nav Items
     nav.navbar.navbar-expand-md.navbar-dark
       .container  
-        button.navbar-toggler(type="button", data-toggle="collapse", data-target="#mainNavbar")
+        button.navbar-toggler(type="button", data-toggle="collapse", data-target="#collapseNavbar")
           span.navbar-toggler-icon
-        .collapse.navbar-collapse#mainNavbar
+        .collapse.navbar-collapse#collapseNavbar
           ul.nav.ml-auto
             li.nav-item
-              a.nav-link(href="/") Movies
+              a.nav-link.active(href="/") Movies
             li.nav-item
-              a.nav-link(href="/movies") Synopsis
+              a.nav-link.active(href="/movies") Synopsis
             li.nav-item
-              a.nav-link(href="/movies/reserve") Reserve
+              a.nav-link.active(href="/movies/reserve") Reserve
             li.nav-item
-              a.nav-link(href="/contact") Contact
+              a.nav-link.active(href="/contact") Contact
     //- End Navbar
     br
     .container-fluid
       block content
       
       //- Footer Section
-      footer.fixed-bottom.text-right
-        .container
-          p.af-footer-text 2017 &copy; 
-            a(href="/") Atomic Films
+      footer.justify-content-center
+        .container-fluid
+          .row
+            .col-12.col-md-10
+              p.af-footer-text 2017 &copy; 
+                a(href="/") Atomic Films
             
       script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
       script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
