--- a/app/app_server/views/movie-list.pug
+++ b/app/app_server/views/movie-list.pug
@@ -12,15 +12,17 @@ block content
     br
     .container
       .row.justify-content-center
-        .col-6.col-md-4
-          .thumbnail
-            img.img-responsive.w-100(src="./images/mp1.jpg")
+        each movie in movies
+          .col-6.col-md-4
+            .thumbnail
+              img.img-responsive.w-100(src= movie.poster)
+              br
+              br
+              a.btn-link(href="/movies")
+                button.btn.btn-warning(type="button")= movie.information
             br
             br
-            a.btn-link(href="/movies")
-              button.btn.btn-warning(type="button") Info
-          br
-          br
+      //-
         .col-6.col-md-4
           .thumbnail
             img.img-responsive.w-100(src="./images/mp2.jpg")
@@ -91,5 +93,100 @@ block content
             br
             a.btn-link(href="/movies")
               button.btn.btn-warning(type="button") Info
+              
+//-
+  extends layout
+
+  block content
+    //- Feature Films Section
+    section.jumbotron.text-center
+      .container
+        h1.jumbotron-heading-text= pageHeader.heading
+        br
+        br
+        p.lead.text-white= pageHeader.tagline
+      br
+      br
+      .container
+        .row.justify-content-center
+          .col-6.col-md-4
+            .thumbnail
+              img.img-responsive.w-100(src="./images/mp1.jpg")
+              br
+              br
+              a.btn-link(href="/movies")
+                button.btn.btn-warning(type="button") Info
+            br
+            br
+          .col-6.col-md-4
+            .thumbnail
+              img.img-responsive.w-100(src="./images/mp2.jpg")
+              br
+              br
+              a.btn-link(href="/movies")
+                button.btn.btn-warning(type="button") Info
+            br
+            br
+          .col-6.col-md-4
+            .thumbnail
+              img.img-responsive.w-100(src="./images/mp3.jpg")
+              br
+              br
+              a.btn-link(href="/movies")
+                button.btn.btn-warning(type="button") Info
+            br
+            br
+          .col-6.col-md-4
+            .thumbnail
+              img.img-responsive.w-100(src="./images/mp4.jpg")
+              br
+              br
+              a.btn-link(href="/movies")
+                button.btn.btn-warning(type="button") Info
+            br
+            br
+          .col-6.col-md-4
+            .thumbnail
+              img.img-responsive.w-100(src="./images/mp5.jpg")
+              br
+              br
+              a.btn-link(href="/movies")
+                button.btn.btn-warning(type="button") Info
+            br
+            br
+          .col-6.col-md-4
+            .thumbnail
+              img.img-responsive.w-100(src="./images/mp6.jpg")
+              br
+              br
+              a.btn-link(href="/movies")
+                button.btn.btn-warning(type="button") Info
+            br
+            br
+          .col-6.col-md-4
+            .thumbnail
+              img.img-responsive.w-100(src="./images/mp11.jpg")
+              br
+              br
+              a.btn-link(href="/movies")
+                button.btn.btn-warning(type="button") Info
+            br
+            br
+          .col-6.col-md-4
+            .thumbnail
+              img.img-responsive.w-100(src="./images/mp12.jpg")
+              br
+              br
+              a.btn-link(href="/movies")
+                button.btn.btn-warning(type="button") Info
+            br
+            br
+          .col-6.col-md-4
+            .thumbnail
+              img.img-responsive.w-100(src="./images/mp9.jpg")
+              br
+              br
+              a.btn-link(href="/movies")
+                button.btn.btn-warning(type="button") Info
              
    
