--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -12,7 +12,7 @@ body {
 /******************** Atomic-Films brand section (ALL PAGES) *********************/
 .atomicFilms-brand-text {
     font-family: 'Megrim', sans-serif;
-    font-size: 3.5rem;
+    font-size: 4rem;
     font-weight: bolder;
     color: #b57700;
     padding-top: 10px;
@@ -31,16 +31,16 @@ p.af-header-font {
 
 /******************** Navbar section (ALL PAGES) **********************/
 nav.navbar {
-    background-color: #bf7d00;
+    background-color: #027091;
     padding-bottom: 2px;
     padding-top: 2px;
 }
 
 #collapseNavbar li.nav-item a {
-    color: #000000;
+    color: #bf7d00;
     font-family: 'Bungee Hairline', sans-serif;
-    font-size: 1.25rem;
-    font-weight: bolder; 
+    font-size: 1.5rem;
+     
 }
 
 #collapseNavbar li.nav-item a:hover {
@@ -55,6 +55,9 @@ li {
     display: inline-block;
 }
 
+button.navbar:hover {
+  background-color: #b57700;
+}
 
 
 /***************** Movies Page (MOVIE-LIST) *****************/
@@ -107,13 +110,14 @@ button.btn:hover {
 
 /************************ Footer section (ALL PAGES) **************************/
 footer {
-    background-color: #bf7d00;
-    padding-bottom: 5px;
+    background-color: #027091;
+  
    
 }
 
 footer a {
-    color: #0a586f;
+    color: #bf7d00;
+    font-size: 1rem;
     text-decoration: none !important;
 }
 
@@ -123,6 +127,8 @@ footer a:hover {
 
 p.af-footer-text {
     font-family: 'Bungee Hairline', sans-serif;
-    color: #000000;
+    color: #bf7d00;
+    font-size: 1.25rem;
+   
 }
 
