--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -10,37 +10,32 @@ html
     
   body
     //- Atomic Films Brand Section
-    .container-fluid#af-brand
+    .container#af-brand
       .atomicFilms-brand-text.float-left= title
       .row
         .col-12.col-md-10
-    //- Navbar Nav Items
-    nav.navbar.navbar-expand-md.navbar-dark.sticky-top
-      .container  
-        button.navbar-toggler.bg-dark(type="button", data-toggle="collapse", data-target="#collapseNavbar")
-          span.navbar-toggler-icon 
+      //- Navbar Nav Items
+      nav.navbar.navbar-expand-md.sticky-top
+        button.navbar-toggler.bg-success(type="button", data-toggle="collapse", data-target="#collapseNavbar")
+          .col-12.col-md-6
+            span.navbar-toggler-icon-text-center Menu
         .collapse.navbar-collapse#collapseNavbar
-          ul.nav.ml-auto
+          ul.nav.mx-auto
             li.nav-item
-              a.nav-link.active.font-weight-bold.float-sm-right(href="/") Movies
+              a.nav-link.active.font-weight-bold.float-sm-center(href="/") Featured
             li.nav-item
-              a.nav-link.active.font-weight-bold.float-sm.right(href="/movies") Synopsis
+              a.nav-link.active.font-weight-bold.float-sm.center(href="/movies") Details
             li.nav-item
-              a.nav-link.active.font-weight-bold.float-sm-right(href="/movies/reserve") Reserve
+              a.nav-link.active.font-weight-bold.float-sm-center(href="/movies/reserve") Reserve
             li.nav-item
-              a.nav-link.active.font-weight-bold.float-sm-right(href="/contact") Contact
-    //- End Navbar
-    br
-    .container-fluid
+              a.nav-link.active.font-weight-bold.float-sm-center(href="/contact") Contact
+      //- End Navbar
+      br
       block content
-      
-      //- Footer Section
-      footer.text-left
-        .container-fluid
-          .row
-            p.af-footer-text.font-weight-bold 2017 &copy; 
-              a(href="/") Atomic Films
-            
-      script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
-      script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
-      script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous")
+        //- Footer Section
+        footer.fixed-bottom.text-left
+          p.af-footer-text.font-weight-bold 2017 &copy; Atomic Films
+              
+        script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
+        script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous")
