--- a/app/app_server/views/movie-list.pug
+++ b/app/app_server/views/movie-list.pug
@@ -6,7 +6,6 @@ block content
     .container
       h1.jumbotron-heading-text= pageHeader.heading
       br
-      br
       p.lead.text-white= pageHeader.tagline
     br
     br
@@ -19,11 +18,15 @@ block content
               br
               br
               a.btn-link(href="/movies")
-                button.btn.btn-success(type="button")= movie.information
+              h4.card-title-text.text-warning.text-success [#{movie.id}]
+              h4.card-title-text.text-warning.text-center #{movie.title}
+                br
+                br
+                button.btn.btn-success(type="button")= movie.details
             br  
             br
             
-      //-
+//- 
         .col-6.col-md-4
           .thumbnail
             img.img-responsive.w-100(src="./images/mp2.jpg")
@@ -94,7 +97,7 @@ block content
             br
             a.btn-link(href="/movies")
               button.btn.btn-warning(type="button") Info
-              
+      
 //-
   extends layout
 
