--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -19,7 +19,7 @@ html
         button.navbar-toggler.bg-success(type="button", data-toggle="collapse", data-target="#collapseNavbar")
           .col-12.col-md-6
             span.navbar-toggler-icon-text-center Menu
-        .collapse.navbar-collapse#collapseNavbar
+        #collapseNavbar.collapse.navbar-collapse
           ul.nav.mx-auto
             li.nav-item
               a.nav-link.active.font-weight-bold.float-sm-center(href="/") Featured
@@ -30,12 +30,14 @@ html
             li.nav-item
               a.nav-link.active.font-weight-bold.float-sm-center(href="/contact") Contact
       //- End Navbar
-      br
+      
       block content
-        //- Footer Section
-        footer.fixed-bottom.text-left
-          p.af-footer-text.font-weight-bold 2017 &copy; Atomic Films
+      //- Footer Section
+      footer.fixed-bottom.text-left
+        .container
+          .row
+            p.af-footer-text.font-weight-bold 2017 &copy; Atomic Films
               
-        script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
-        script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous")
+      script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
+      script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
+      script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous")
