--- a/app/app_server/views/movie-list.pug
+++ b/app/app_server/views/movie-list.pug
@@ -18,7 +18,7 @@ block content
               br
               br
               a.btn-link(href="/movies")
-              h4.card-title-text.text-warning.text-success [#{movie.id}]
+              h4.card-title-text.text-warning.text-center [#{movie.id}]
               h4.card-title-text.text-warning.text-center #{movie.title}
                 br
                 br
