--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -33,10 +33,9 @@ html
       
       block content
       //- Footer Section
-      footer.fixed-bottom.text-left
+      footer.text-left
         .container
-          .row
-            p.af-footer-text.font-weight-bold 2017 &copy; Atomic Films
+          p.af-footer-text.font-weight-bold 2017 &copy; Atomic Films
               
       script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
       script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
