--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -15,10 +15,9 @@ html
       .row
         .col-12.col-md-10
       //- Navbar Nav Items
-      nav.navbar.navbar-expand-lg.sticky-top
-        button.navbar-toggler.bg-success(type="button", data-toggle="collapse", data-target="#collapseNavbar")
-          .col-12.col-md-6
-            span.toggler-icon.text-center Menu
+      nav.navbar.navbar-expand-md
+        button.navbar-toggler.bg-light(type="button", data-toggle="collapse", data-target="#collapseNavbar")
+          span.toggler-icon.text-center Menu
         #collapseNavbar.collapse.navbar-collapse
           ul.nav.mx-auto.justify-content-center
             li.nav-item
@@ -35,7 +34,8 @@ html
       //- Footer Section
       footer.text-left
         .container
-          p.af-footer-text.font-weight-bold 2017 &copy; Atomic Films
+          .row
+            p.af-footer-text.font-weight-bold 2017 &copy; Atomic Films
               
       script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
       script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
